[Blog] 도메인 수정, null Point 수정
- 값이 없을 경우 수정
- 도메인 toylap.me로 수정

--- a/.env.local.example
+++ b/.env.local.example
@@ -28,5 +28,5 @@ NOTION_VIEWS_DB_ID=
 # ===================================
 # 사이트 정보
 # ===================================
-NEXT_PUBLIC_SITE_URL=https://minsu.dev
-NEXT_PUBLIC_SITE_NAME=minsu.dev
+NEXT_PUBLIC_SITE_URL=https://toylap.me
+NEXT_PUBLIC_SITE_NAME=toylap.me
