[Blog] CreateDt공통 언어로 처리

--- a/.env.local.example
+++ b/.env.local.example
@@ -10,15 +10,15 @@ NOTION_TOKEN=ntn_your_token_here
 # ===================================
 
 # 1. Posts DB
-#    속성: Title(제목), Slug(텍스트), Description(텍스트), Tags(다중선택), Published(체크박스), Date(날짜)
+#    속성: Title(제목), Slug(텍스트), Description(텍스트), Tags(다중선택), Published(체크박스), CreateDt(날짜)
 NOTION_DATABASE_ID=
 
 # 2. Comments DB
-#    속성: Title(제목), PostSlug(텍스트), ParentId(텍스트), Name(텍스트), Password(텍스트), Body(텍스트), CreatedAt(날짜)
+#    속성: Title(제목), PostSlug(텍스트), ParentId(텍스트), Name(텍스트), Password(텍스트), Body(텍스트), CreateDt(날짜)
 NOTION_COMMENTS_DB_ID=
 
 # 3. Likes DB
-#    속성: Title(제목), PostSlug(텍스트), UserHash(텍스트), CreatedAt(날짜)
+#    속성: Title(제목), PostSlug(텍스트), UserHash(텍스트), CreateDt(날짜)
 NOTION_LIKES_DB_ID=
 
 # 4. Views DB
